--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   	};
     o.lastChild.append(d);
   	c.appendChild(p);
-  })(window, document, 'https://widgets.500apps.com/botup/', 'botupchat.js');
+  })(window, document, '', 'botupchat.js');
   },2000);
 </script>
 <!-- End of ClickDesk -->
