--- a/index.html
+++ b/index.html
@@ -11,28 +11,21 @@
       <button class="button--flat menu-hidden"><i class="fas fa-bars"></i></button>
     </ul>
       <!-- ClickDesk Live Chat Service for websites -->
- <script>
-      setTimeout(function() {
-        (function(n, j, c, h, a, t) {
-          d = j.createElement("div");
-          d.id = "app";
-          t = j.getElementsByTagName("head")[0];
-          a = j.createElement("script");
-          a.async = 1;
-          a.id = "ninjachat";
-          a.src = c + h;
-          a.onload = function() {
-             n._NC.init('488683798661477','371','dev')
-          };
-          j.lastChild.append(d);
-          t.appendChild(a);
-        })(window, document, "", "ninjachat.js");
-      }, 2000);
-    </script>
+<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-MSD6K4P');</script>
+<!-- End Google Tag Manager -->
 <!-- End of ClickDesk -->
   </nav>
 </header>
 <article>
+  <!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MSD6K4P"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
   <figure class="banner-img">
     <img src="https://images.unsplash.com/photo-1576495169018-bd2414046c6b?ixid=MnwxMjA3fDB8MHxzZWFyY2h8NjF8fGFydHxlbnwwfHwwfHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=700&q=60" alt="Art Wallpaper">
     <figcaption>Art Wallpaper</figcaption>
