--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
     </ul>
       <!-- ClickDesk Live Chat Service for websites -->
 <!-- ClickDesk Live Chat Service for websites -->
+<!-- ClickDesk Live Chat Service for websites -->
 <script type='text/javascript'>
-var _glc =_glc || []; _glc.push('ag9zfmNsaWNrZGVza2NoYXRyFAsSB3dpZGdldHMYgIDI6Nj4xQoM');
+var _glc =_glc || []; _glc.push('all_ag9zfmNsaWNrZGVza2NoYXRyEgsSBXVzZXJzGICAsJjwxr4KDA');
 var glcpath = (('https:' == document.location.protocol) ? 'https://my.clickdesk.com/clickdesk-ui/browser/' : 
 'http://my.clickdesk.com/clickdesk-ui/browser/');
 var glcp = (('https:' == document.location.protocol) ? 'https://' : 'http://');
@@ -21,6 +22,7 @@ var glcspt = document.createElement('script'); glcspt.type = 'text/javascript';
 glcspt.async = true; glcspt.src = glcpath + 'livechat-cloud-new.js';
 var s = document.getElementsByTagName('script')[0];s.parentNode.insertBefore(glcspt, s);
 </script>
+<!-- End of ClickDesk -->
 <!-- End of ClickDesk -->
 <!-- End Google Tag Manager -->
 <!-- End of ClickDesk -->
