--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <!-- ClickDesk Live Chat Service for websites -->
 <!-- ClickDesk Live Chat Service for websites -->
 <script type='text/javascript'>
+<script type='text/javascript'>
 var _glc =_glc || []; _glc.push('ag9zfmNsaWNrZGVza2NoYXRyFAsSB3dpZGdldHMYgIDIzIr2pAsM');
 var glcpath = (('https:' == document.location.protocol) ? 'https://my.clickdesk.com/clickdesk-ui/browser/' : 
 'http://my.clickdesk.com/clickdesk-ui/browser/');
