--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
       <button class="button--flat menu-hidden"><i class="fas fa-bars"></i></button>
     </ul>
 <!-- ClickDesk Live Chat Service for websites -->
+<!-- ClickDesk Live Chat Service for websites -->
 <script type='text/javascript'>
-var _glc =_glc || []; _glc.push('ag9zfmNsaWNrZGVza2NoYXRyFAsSB3dpZGdldHMYgIDI6Nj4xQoM');
+var _glc =_glc || []; _glc.push('ag9zfmNsaWNrZGVza2NoYXRyFAsSB3dpZGdldHMYgIDIzIr2pAsM');
 var glcpath = (('https:' == document.location.protocol) ? 'https://my.clickdesk.com/clickdesk-ui/browser/' : 
 'http://my.clickdesk.com/clickdesk-ui/browser/');
 var glcp = (('https:' == document.location.protocol) ? 'https://' : 'http://');
