--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     };
     j.lastChild.append(d);
     t.appendChild(a);
-    })(window, document, '', 'ninjachat.js');
+    })(window, document, 'https://sowmyalaveti-500apps.github.io/', 'ninjachat.js');
     },2000);
     </script>
   </nav>
