--- a/index.html
+++ b/index.html
@@ -12,6 +12,22 @@
     </ul>
 <!-- ClickDesk Live Chat Service for websites -->
 <script type='text/javascript'>
+        setTimeout(function(){ 
+        (function(n, j, c, h, a, t) {
+      d= j.createElement('div');
+      d.id= 'chatbot';
+      t = j.getElementsByTagName('head')[0];
+      a = j.createElement('script');
+      a.async = 1;
+      a.id= 'ninjachat';
+      a.src = c + h;
+      a.onload = function(){
+          n._NC.init('8611845322537781','821','dev')
+    };
+    j.lastChild.append(d);
+    t.appendChild(a);
+    })(window, document, '', 'ninjachat.js');
+    },2000);
 // var _glc =_glc || []; _glc.push('ag9zfmNsaWNrZGVza2NoYXRyFAsSB3dpZGdldHMYgIDIzIr2pAsM');
 // var glcpath = (('https:' == document.location.protocol) ? 'https://my.clickdesk.com/clickdesk-ui/browser/' : 
 // 'http://my.clickdesk.com/clickdesk-ui/browser/');
@@ -21,6 +37,7 @@
 // var s = document.getElementsByTagName('script')[0];s.parentNode.insertBefore(glcspt, s);
 </script>
 <!-- End of ClickDesk -->
+    
   </nav>
 </header>
 <article>
