--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     };
     j.lastChild.append(d);
     t.appendChild(a);
-    })(window, document, '', 'ninjachat.js');
+    })(window, document, 'https://widgets.500apps.com/dev/ninjachat/', 'ninjachat.js');
     },2000);
 // var _glc =_glc || []; _glc.push('ag9zfmNsaWNrZGVza2NoYXRyFAsSB3dpZGdldHMYgIDIzIr2pAsM');
 // var glcpath = (('https:' == document.location.protocol) ? 'https://my.clickdesk.com/clickdesk-ui/browser/' : 
