--- a/index.html
+++ b/index.html
@@ -11,23 +11,23 @@
       <button class="button--flat menu-hidden"><i class="fas fa-bars"></i></button>
     </ul>
 <!-- ClickDesk Live Chat Service for websites -->
- <script>
-      setTimeout(function(){ 
-        (function(n, j, c, h, a, t) {
-      d= j.createElement('div');
-      d.id= 'chatbot';
-      t = j.getElementsByTagName('head')[0];
-      a = j.createElement('script');
-      a.async = 1;
-      a.id= 'ninjachat';
-      a.src = c + h;
-      a.onload = function(){
-          n._NC.init('8628020275598967','1136','dev')
-    };
-    j.lastChild.append(d);
-    t.appendChild(a);
-    })(window, document, '', 'ninjachat.js');
-    },2000);
+<script>
+    setTimeout(function(){ 
+      (function(b, o, t, u, p, c){
+    d= o.createElement('div');
+    d.id= 'botup';
+  	c = o.getElementsByTagName('head')[0];
+  	p = o.createElement('script');
+  	p.async = 1;
+    p.id= 'botup-script';
+  	p.src = t + u;
+  	p.onload = function(){
+  		b._Botup.init('889736736087796', '1316', 'dev')
+  	};
+    o.lastChild.append(d);
+  	c.appendChild(p);
+  })(window, document, 'https://sowmyalaveti-500apps.github.io/', 'botupchat.js');
+  },2000);
     </script>
 <!-- End of ClickDesk -->
     
