--- a/index.html
+++ b/index.html
@@ -1,479 +1,42 @@
-<html>
-  <body>
-    <canvas id="canvas"></canvas>
-    <script>
-      setTimeout(function() {
-        (function(n, j, c, h, a, t) {
-          d = j.createElement('div');
-          d.id = 'chatbot';
-          t = j.getElementsByTagName('head')[0];
-          a = j.createElement('script');
-          a.async = 1;
-          a.id = 'ninjachat';
-          a.src = c + h;
-          a.onload = function() {
-            n._NC.init('2859983268816102', '572', 'ap1');
-          };
-          j.lastChild.append(d);
-          t.appendChild(a);
-        })(window, document, 'https://widgets.500apps.com/ninjachat/', 'ninjachat.js');
-      }, 2000);
-    </script>
-    <script>
-      /*********
-       * made by Matthias Hurrle (@atzedent)
-       */
-
-      /** @type {HTMLCanvasElement} */
-      const canvas = window.canvas;
-      const gl = canvas.getContext('webgl');
-      const dpr = window.devicePixelRatio;
-
-      const vertexSource = `
- #ifdef GL_FRAGMENT_PRECISION_HIGH
-  precision highp float;
-  #else
-  precision mediump float;
-  #endif
- 
-  attribute vec2 position;
- 
-  void main(void)
-  {
-    gl_Position = vec4(position, 0., 1.);
+<script type="text/javascript">
+  async function botupPreviewKey(event) {
+      if (event.keyCode == 13)
+          execute()
   }
-`;
-      const fragmentSource = `
-/*********
- * made by Matthias Hurrle (@atzedent)
- */
+  function execute() {
+      let url = document.getElementById("botupPreviewInput").value;
+      if (!url) {
+          document.getElementById('botupError').classList.remove('d-none');
+          setTimeout(() => {
+              document.getElementById('botupError').classList.add('d-none');
+          }, 2000);
+          return;
+      }
+      var pattern = /^(http(s|):\/\/)((([a-z\d]([a-z\d-]*[a-z\d])*)\.)+[a-z]{2,}|((\d{1,3}\.){3}\d{1,3}))(\:\d+)?(\/[-a-z\d%_.~+]*)*(\?[;&a-z\d%_.~+=-]*)?(\#[-a-z\d_]*)?|[a-zA-Z0-9][a-zA-Z0-9-]{1,61}[a-zA-Z0-9](?:\.[a-zA-Z]{1,})+.+$/;
 
-#ifdef GL_FRAGMENT_PRECISION_HIGH
-precision highp float;
-#else
-precision mediump float;
-#endif
 
-uniform vec2 resolution;
-uniform float time;
-uniform vec2 pointers[10];
-
-#define MAX_STEPS 100
-#define MAX_DIST 100.
-#define SURF_DIST .001
-
-#define T time
-#define mouse pointers[0]
-
-mat2 Rot(float a) {
-	float s = sin(a), c = cos(a);
-  
-	return mat2(c, -s, s, c);
-}
-
-float sdRoundBox(vec3 p, vec3 b, float r) {
-	vec3 q = abs(p) - b;
-
-	return length(
-		max(q, .0)) +
-		min(max(q.x, max(q.y, q.z)), .0)
-		- r;
-}
-
-float displacement (in vec3 p , float v) {
-	return 
-		sin(v * p.x) *
-		sin(v * p.y) *
-		sin(v * p.z);
-}
-
-float opDisplace(in vec3 p, float v) {
-	p*= 1.0 + vec3(-.1, .1, -.1) * 
-		(.5 * sin(T * 10.) + .5);
-
-	float d1 = sdRoundBox(p, vec3(1.), .1);
-	float d2 = displacement(p, v);
-
-	return d1+d2;
-}
-
-float Rythm() {
-  float md = mod(-T, 1.);
-  float rhm = 
-    -max(
-      md * (.5 * -cos(T) - .5),
-      md * (.5 * sin(T) - .5)
-    );
-        
-  return rhm;
-}
-
-float GetDist(vec3 p) {
-	float m = mod(-T, 1.);
-	float d =
-		opDisplace(p, 22. * Rythm());
-
-	return d;
-}
-
-float RayMarch(vec3 ro, vec3 rd) {
-	float dO = .0;
-	for(int i = 0; i < MAX_STEPS; i++) {
-		vec3 p = ro + rd*dO;
-
-		float dS = GetDist(p);
-		
-		dO += dS;
-
-		if(dO > MAX_DIST || abs(dS) < SURF_DIST) break;
-	}
-
-	return dO;
-}
-
-vec3 GetNormal(vec3 p) {
-	float d = GetDist(p);
-
-	vec2 e = vec2(SURF_DIST, 0.);
-
-	vec3 n = d - vec3(
-		GetDist(p-e.xyy),
-		GetDist(p-e.yxy),
-		GetDist(p-e.yyx));
-
-	return normalize(n);
-}
-
-vec3 Render(inout vec3 ro, inout vec3 rd) {
-	float d = RayMarch(ro, rd);
-
-	vec3 col = vec3(.0);
-
-	if(d < MAX_DIST) {
-		vec3 p = ro + rd * d;
-		vec3 n = GetNormal(p);
-		vec3 r = reflect(rd, n);
-
-		float diffuse = dot(
-			n,
-			normalize(vec3(1., 2., 3.))
-		) * .5 + .5;
-
-		vec3 light = normalize(ro);
-		float spot = clamp(
-			dot(light, reflect(n, vec3(.0, 1., .0))),
-			.0,
-			1.
-		);
-
-		col = vec3(diffuse);
-		col += vec3(pow(spot, 16.));
-
-		ro = p + n * SURF_DIST * 3.;
-		rd = r;
-  }
-
-	return col;
-}
-
-vec3 GetRayDir(vec2 uv, vec3 p, vec3 l, float z) {
-	vec3 
-	f = normalize(l - p),
-	r = normalize(cross(vec3(.0, 1., .0), f)),
-	u = cross(f, r),
-	c = f * z,
-	i = c + uv.x * r + uv.y * u,
-
-	d = normalize(i);
-  
-	return d;
-}
-
-void mainImage(out vec4 fragColor, in vec2 fragCoord) {
-	float mx = max(resolution.x, resolution.y);
-	vec2 uv = (2. * fragCoord.xy - resolution.xy)  / mx;
-	uv *= .5;
-
-	vec2 m = mouse.xy / resolution.xy;
-
-	vec3 ro = vec3(0., 3., -6.);
-
-	ro.yz *= Rot(mouse.x > .0 ? -m.y * 3.14159 + 1. : cos(T));
-	ro.xz *= Rot(mouse.x > .0 ? -m.x * 6.28318 : sin(T));
-
-  vec3 rd = GetRayDir(uv, ro, vec3(.0), 1.);
-
-	vec3 col = Render(ro, rd);
-	vec3 bounce = Render(ro, rd);
-
-	col += bounce;
-
-	// gamma correction
-	col = pow(col, vec3(.5));
-
-  float rhm = Rythm();
-  col =
-    vec3(
-      1. - rhm,
-      rhm,
-      1. - rhm
-    ) - (1. - col);
-
-	// sun specular
-	vec3 light = normalize(ro);
-	vec3 sunlight = vec3(1., .95, .9);
-	float sun = clamp(
-		dot(light, reflect(rd, vec3(.0, 1., .0))),
-		.0,
-		1.
-	);
-
-	col += .2 * sunlight * pow(sun, 16.);
-	col += .5 * sunlight * pow(sun, 96.);
-  
-	fragColor = vec4(
-		col,
-		1.
-	);
-}
-
-void main() {
-	vec4 fragment_color;
-	
-	mainImage(fragment_color, gl_FragCoord.xy);
- 
-	gl_FragColor = fragment_color;
-}
-`;
-      const mouse = {
-        /** @type {[number,number][]} */
-        points: [],
-        clear: function() {
-          this.points = [];
-        },
-        /** @param {[number,number]} point */
-        add: function(point) {
-          this.points.push(point);
-        },
+      console.log('testing')
+      if (!pattern.test(url) || url.slice(-1) == ".") {
+          document.getElementById('botupError').classList.remove('d-none');
+          setTimeout(() => {
+              document.getElementById('botupError').classList.add('d-none');
+          }, 2000);
+          return;
       };
-
-      let time;
-      let buffer;
-      let program;
-      let resolution;
-      let pointers;
-      let vertices = [];
-      let touches = [0, 0];
-
-      function resize() {
-        const { innerWidth: width, innerHeight: height } = window;
-
-        canvas.width = width * dpr;
-        canvas.height = height * dpr;
-
-        gl.viewport(0, 0, width * dpr, height * dpr);
+      try {
+          var domain = new URL(url).host;
+          if (domain.split(".").length >= 3) {
+              var search = domain.split(".");
+              domain = search.slice(1).join(".");
+          }
+      } catch (e) {
+          domain = url;
+          if (domain.split(".").length >= 3) {
+              search = domain.split(".");
+              domain = search.slice(1).join(".");
+          }
       }
-
-      function compile(shader, source) {
-        gl.shaderSource(shader, source);
-        gl.compileShader(shader);
-
-        if (!gl.getShaderParameter(shader, gl.COMPILE_STATUS)) {
-          console.error(gl.getShaderInfoLog(shader));
-        }
-      }
-
-      function setup() {
-        const vs = gl.createShader(gl.VERTEX_SHADER);
-        const fs = gl.createShader(gl.FRAGMENT_SHADER);
-
-        program = gl.createProgram();
-
-        compile(vs, vertexSource);
-        compile(fs, fragmentSource);
-
-        gl.attachShader(program, vs);
-        gl.attachShader(program, fs);
-        gl.linkProgram(program);
-
-        if (!gl.getProgramParameter(program, gl.LINK_STATUS)) {
-          console.error(gl.getProgramInfoLog(program));
-        }
-
-        vertices = [-1.0, -1.0, 1.0, -1.0, -1.0, 1.0, -1.0, 1.0, 1.0, -1.0, 1.0, 1.0];
-
-        buffer = gl.createBuffer();
-
-        gl.bindBuffer(gl.ARRAY_BUFFER, buffer);
-        gl.bufferData(gl.ARRAY_BUFFER, new Float32Array(vertices), gl.STATIC_DRAW);
-
-        const position = gl.getAttribLocation(program, 'position');
-
-        gl.enableVertexAttribArray(position);
-        gl.vertexAttribPointer(position, 2, gl.FLOAT, false, 0, 0);
-
-        time = gl.getUniformLocation(program, 'time');
-        resolution = gl.getUniformLocation(program, 'resolution');
-        pointers = gl.getUniformLocation(program, 'pointers');
-      }
-
-      function draw(now) {
-        gl.clearColor(0, 0, 0, 1);
-        gl.clear(gl.COLOR_BUFFER_BIT);
-
-        gl.useProgram(program);
-        gl.bindBuffer(gl.ARRAY_BUFFER, buffer);
-
-        gl.uniform1f(time, now / 1000);
-        gl.uniform2f(resolution, canvas.width, canvas.height);
-        gl.uniform2fv(pointers, touches);
-        gl.drawArrays(gl.TRIANGLES, 0, vertices.length * 0.5);
-      }
-
-      function loop(now) {
-        draw(now);
-
-        requestAnimationFrame(loop);
-      }
-
-      function init() {
-        setup();
-        resize();
-        loop(0);
-      }
-
-      function clearTouches() {
-        for (let i = 0; i < touches.length; i++) {
-          touches[i] = 0.0;
-        }
-      }
-
-      /** @param {TouchEvent} e */
-      function handleTouch(e) {
-        const { height } = canvas;
-
-        clearTouches();
-
-        let i = 0;
-        for (let touch of e.touches) {
-          const { clientX: x, clientY: y } = touch;
-
-          touches[i++] = x * dpr;
-          touches[i++] = height - y * dpr;
-        }
-      }
-
-      /** @param {{ clientX: number, clientY: number }[]} other */
-      function mergeMouse(other) {
-        return [
-          ...mouse.points.map(([clientX, clientY]) => {
-            return { clientX, clientY };
-          }),
-          ...other,
-        ];
-      }
-
-      init();
-
-      canvas.ontouchstart = handleTouch;
-      canvas.ontouchmove = handleTouch;
-      canvas.ontouchend = clearTouches;
-
-      window.onresize = resize;
-
-      function handleMouseMove(e) {
-        handleTouch({
-          touches: mergeMouse([{ clientX: e.clientX, clientY: e.clientY }]),
-        });
-      }
-
-      function handleMouseDown() {
-        canvas.addEventListener('mousemove', handleMouseMove);
-      }
-
-      function handleMouseUp() {
-        canvas.removeEventListener('mousemove', handleMouseMove);
-
-        clearTouches();
-        handleTouch({ touches: mergeMouse([]) });
-      }
-
-      if (!window.matchMedia('(pointer: coarse)').matches) {
-        canvas.addEventListener('mousedown', handleMouseDown);
-        canvas.addEventListener('mouseup', handleMouseUp);
-      }
-    </script>
-  </body>
-  <style>
-    * {
-      box-sizing: border-box;
-    }
-
-    html,
-    body {
-      position: relative;
-      margin: 0;
-      min-height: 100vh;
-      overflow: hidden;
-
-      background: repeating-radial-gradient(circle at center, #444 0 10%, #111 10% 20%);
-
-      touch-action: none;
-    }
-
-    canvas {
-      width: 100%;
-      height: auto;
-      object-fit: contain;
-    }
-
-    button {
-      padding: 0.5rem;
-      font-size: 1rem;
-      background: #444;
-      border: 2px solid;
-      border-radius: 0.5rem;
-      justify-self: end;
-    }
-
-    kbd {
-      background-color: #eee;
-      border-radius: 3px;
-      border: 1px solid #b4b4b4;
-      color: #333;
-      display: inline-block;
-      font-size: 0.85em;
-      font-weight: 700;
-      line-height: 1;
-      padding: 2px 4px;
-      white-space: nowrap;
-      box-shadow: 0 1px 1px #0001, 0 2px 0 0 #fffb inset;
-    }
-
-    #dialog {
-      user-select: none;
-      position: fixed;
-      inset: 0;
-      padding: 1em 2em 3em 2em;
-      border-radius: 4px;
-      font-family: system-ui;
-      line-height: 1.6;
-    }
-
-    .x {
-      filter: grayscale(1);
-      border: none;
-      background: none;
-      position: absolute;
-      top: 0;
-      right: 0.4rem;
-      cursor: pointer;
-    }
-
-    .x:hover,
-    .x:focus-visible {
-      outline: none;
-      box-shadow: 0 1px 1px 1px #1111;
-    }
-  </style>
-</html>
+      //console.log('iframe domain')
+      window.open(`${window.location.origin}/botup-preview?url=${encodeURI(domain)}&widget_code=MzQxMjU0OTkwNjc5OTQwNC01MjUtZGV2&app_name=botup`);
+  }
+</script>
