--- a/index.html
+++ b/index.html
@@ -1,4 +1,15 @@
+
+<!DOCTYPE html>
+<html>
+<body>
+
+<h2>HTML Iframes</h2>
+<p>You can use the height and width attributes to specify the size of the iframe:</p>
+
 <iframe src="https://www.naukri.com/" height="700px"></iframe>
+
+</body>
+</html>
 <script type="text/javascript">
     const botupPreviewKey = async (event) =>  {
         if (event.keyCode == 13)
