--- a/index.html
+++ b/index.html
@@ -1,54 +1,37 @@
-
 <!DOCTYPE html>
 <html>
-<body>
+  <body>
+    <h2>HTML Iframes</h2>
+    <p>
+      You can use the height and width attributes to specify the size of the
+      iframe:
+    </p>
 
-<h2>HTML Iframes</h2>
-<p>You can use the height and width attributes to specify the size of the iframe:</p>
+    <iframe src="https://www.naukri.com/" height="700px"></iframe>
+    <!DOCTYPE html>
+    <html>
+      <body>
+        <h3>A demonstration of how to access an IFRAME element</h3>
 
-<iframe src="https://www.naukri.com/" height="700px"></iframe>
+        <iframe src="https://www.naukri.com/" height="700px"></iframe>
 
-</body>
+        <p>Click the button to get the URL of the iframe.</p>
+
+        <button onclick="myFunction()">Try it</button>
+
+        <p id="demo"></p>
+
+        <script>
+          function myFunction() {
+            var x = document.getElementById("myFrame").src;
+            document.getElementById("demo").innerHTML = x;
+            x.onload = (event) => {
+              console.log("iframe error!");
+              return true;
+            };
+          }
+        </script>
+      </body>
+    </html>
+  </body>
 </html>
-<script type="text/javascript">
-    const botupPreviewKey = async (event) =>  {
-        if (event.keyCode == 13)
-            execute()
-    }
-    const execute = () => {
-        let url = document.getElementById("botupPreviewInput").value;
-        if (!url) {
-            document.getElementById('botupError').classList.remove('d-none');
-            setTimeout(() => {
-                document.getElementById('botupError').classList.add('d-none');
-            }, 2000);
-            return;
-        }
-        var pattern = /^(http(s|):\/\/)((([a-z\d]([a-z\d-]*[a-z\d])*)\.)+[a-z]{2,}|((\d{1,3}\.){3}\d{1,3}))(\:\d+)?(\/[-a-z\d%_.~+]*)*(\?[;&a-z\d%_.~+=-]*)?(\#[-a-z\d_]*)?|[a-zA-Z0-9][a-zA-Z0-9-]{1,61}[a-zA-Z0-9](?:\.[a-zA-Z]{1,})+.+$/;
-
-
-        console.log('testing')
-        if (!pattern.test(url) || url.slice(-1) == ".") {
-            document.getElementById('botupError').classList.remove('d-none');
-            setTimeout(() => {
-                document.getElementById('botupError').classList.add('d-none');
-            }, 2000);
-            return;
-        };
-        try {
-            var domain = new URL(url).host;
-            if (domain.split(".").length >= 3) {
-                var search = domain.split(".");
-                domain = search.slice(1).join(".");
-            }
-        } catch (e) {
-            domain = url;
-            if (domain.split(".").length >= 3) {
-                search = domain.split(".");
-                domain = search.slice(1).join(".");
-            }
-        }
-        //console.log('iframe domain')
-        window.open(`${window.location.origin}/botup-preview?url=${encodeURI(domain)}&widget_code=MzQxMjU0OTkwNjc5OTQwNC01MjUtZGV2&app_name=botup`);
-    }
-</script>
