--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
       iframe:
     </p>
 
-    <iframe src="https://www.naukri.com/" height="700px"></iframe>
+    <iframe src="https://www.naukri.com/" id="myFrame" height="700px"></iframe>
     <!DOCTYPE html>
     <html>
       <body>
         <h3>A demonstration of how to access an IFRAME element</h3>
 
-        <iframe src="https://www.naukri.com/" height="700px"></iframe>
+        <iframe src="https://www.naukri.com/" id="myFrame" height="700px"></iframe>
 
         <p>Click the button to get the URL of the iframe.</p>
 
