--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <body>
         <h3>A demonstration of how to access an IFRAME element</h3>
 
-        <iframe src="https://www.naukri.com/mnjuser/homepage" id="myFrame" height="700px"></iframe>
+        <iframe src="https://www.naukri.com/" sandbox="allow-same-origin allow-scripts" id="myFrame" height="700px"></iframe>
 
         <p>Click the button to get the URL of the iframe.</p>
 
